# devops-mkgif

./: .gitignore  pyproject.toml
mkgif/: models.py  urls.py  utils.py  views.py
mkgif/migrations/: 0001_initial.py  0002_animation_user_image_user.py
mkgif/templates/mkgif/: details.html  index.html
mkgif/templates/mkgif/snippets/: gif.html  gif_loader.html  image_form.html  video_form.html
project/: settings.py  urls.py
