[tool.poetry]
name = "mkgif"
version = "0.1.0"
description = ""
authors = ["Lars Riel <larsriel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.0"
django-rq = "^2.8.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
